--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 
 # base ----------------------------------------
 
+django>=3.0.7
+python>=3.8.8
 matplotlib>=3.2.2
 numpy>=1.18.5
 opencv-python>=4.1.2
